--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="box">
+            <div class="title" id="from_title"><input type="text"/></div>
+            <div class="extract" id="from_extract"></div>
+            <a class="more disabled" href="#" title="Go to the Wikipedia article" id="from_link">Continue to article...</a>
+        </div>
+        
+        <div class="box">
+            <div class="title" id="to_title"></div>
+            <div class="extract" id="to_extract"></div>
+            <a class="more disabled" href="#" title="Go to the Wikipedia article" id="to_link">Continue to article...</a>
+        </div>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
