--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="translator">
             <div class="box">
                 <div class="title" id="from_title"><input type="text" id="search_box" placeholder="Type here..."/></div>
+                <div id="autocomplete"></div>
                 <div class="extract" id="from_extract"></div>
                 <a class="more disabled" href="#" title="Go to the Wikipedia article" id="from_link">Continue to article...</a>
             </div>
