--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="box">
                 <div class="title" id="from_title"><input type="text" id="search_box" placeholder="Type here..."/></div>
                 <div id="autocomplete"></div>
+                <div id="redirect">Redirected from <span></span></div>
                 <div class="extract" id="from_extract"></div>
                 <a class="more disabled" href="#" title="Go to the Wikipedia article" id="from_link">Continue to article...</a>
             </div>
