--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <div id="autocomplete"></div>
                 <div id="redirect">Redirected from <span></span></div>
                 <div class="extract" id="from_extract"></div>
-                <a class="more disabled" href="#" title="Go to the Wikipedia article" id="from_link">Continue to article...</a>
+                <a class="more disabled" href="#" title="Go to the Wikipedia article" id="from_link" target="_blank">Continue to article...</a>
             </div>
 
             <div class="box">
                 <div class="title" id="to_title">Answer...</div>
                 <div class="extract" id="to_extract"></div>
-                <a class="more disabled" href="#" title="Go to the Wikipedia article" id="to_link">Continue to article...</a>
+                <a class="more disabled" href="#" title="Go to the Wikipedia article" id="to_link" target="_blank">Continue to article...</a>
             </div>
         </div>
 
