Added a "show disambiguation" dialog

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div class="title" id="from_title"><input type="text" id="search_box" placeholder="Type here..."/></div>
                 <div id="autocomplete"></div>
                 <div id="redirect">Redirected from <span></span></div>
+                <div id="disambiguation">For other uses, click here to see the disambiguation.</div>
                 <div class="extract" id="from_extract"></div>
                 <a class="more disabled" href="#" title="Go to the Wikipedia article" id="from_link" target="_blank">Continue to article...</a>
             </div>
