--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
             <div class="box">
                 <div class="title" id="to_title">Answer...</div>
+                <div id="section">A section of <span></span></div>
                 <div class="extract" id="to_extract"></div>
                 <a class="more disabled" href="#" title="Go to the Wikipedia article" id="to_link" target="_blank">Continue to article...</a>
             </div>
