--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 <div id="disambiguation">For other uses, click here to see the disambiguation.</div>
                 <div class="extract" id="from_extract"></div>
                 <a class="more disabled" href="#" title="Go to the Wikipedia article" id="from_link" target="_blank">Continue to article...</a>
+                <div class="language_selector">
+                    From: <input type="text" id="from_shortcode" value="pl">
+                    <div id="from_ls_info" class="ls_info">
+                        <span class="ls_full_name">Polski</span><br>
+                        <span class="ls_number">6611</span>
+                    </div>
+                </div>
             </div>
 
             <div class="box">
@@ -35,9 +42,16 @@
                 <div id="section">A section of <span></span></div>
                 <div class="extract" id="to_extract"></div>
                 <a class="more disabled" href="#" title="Go to the Wikipedia article" id="to_link" target="_blank">Continue to article...</a>
+                <div class="language_selector">
+                    To: <input type="text" id="to_shortcode" value="en">
+                    <div id="to_ls_info" class="ls_info">
+                        <span class="ls_full_name">English</span><br>
+                        <span class="ls_number">6431</span>
+                    </div>
+                </div>
             </div>
         </div>
-
+        
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
